--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -101,5 +101,6 @@
   "settingsPageSubtitle4": "National Institutional Partners",
   "settingsPageSubtitle5": "Service Providers",
   "settingsPageShareButtonText": "Share",
-  "settingsPagePrivacyPolicy": "Data Protection"
+  "settingsPagePrivacyPolicy": "Data Protection",
+  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
 }
