--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
@@ -80,7 +80,7 @@
   "resultsPage10Title": "Una notificació quan toqui anar a votar?",
   "resultsPage10NopButton": "Nope, gràcies!",
   "resultsPage10YesButton": "Síííííí",
-  "resultsShare": "Comparteix (coming soon ⏳)",
+  "resultsShare": "Comparteix",
   "@HomePage": "HomePage",
   "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
   "homePageBackToTest": "Tornar al test",
@@ -100,6 +100,6 @@
   "settingsPageSubtitle3": "Soci acadèmic",
   "settingsPageSubtitle4": "Socis institucionals nacionals",
   "settingsPageSubtitle5": "Proveïdors del servei",
-  "settingsPageShareButtonText": "Compartir (pròximament ⏳)",
+  "settingsPageShareButtonText": "Compartir",
   "settingsPagePrivacyPolicy": "Política de Privacitat"
 }
